@@ -7,6 +7,8 @@
     http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=21558).
   * Support LUV colorspace.
   * Don't transform the composite image colorspace, set it instead.
+  * Interpret -border 5% as 5% of width and 5% of height (reference
+    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=21537).
 
 2012-07-30  6.7.8-7 Cristy  <quetzlzacatenango@image...>
   * New version 6.7.8-7, SVN revision 8766.
